#75636: PAR::Packer Windows installation error (and suggested fix) - apply PAR-Packer-1.013_V2.diff

--- a/myldr/winres/pp.rc
+++ b/myldr/winres/pp.rc
@@ -5,7 +5,7 @@
 #define PP_MANIFEST_FILEFLAGS 0
 #include <windows.h>
 
-CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "pp.manifest"
+CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "winres\\pp.manifest"
 
 VS_VERSION_INFO VERSIONINFO
     FILEVERSION        0,0,0,0
@@ -37,5 +37,5 @@ BEGIN
     END
 END
 
-WINEXE ICON pp.ico
+WINEXE ICON winres\\pp.ico
 
