Fix #12 sha1.c warnings due to inconsistent USE_64_BIT_INT
Do not "inline" sha1.c (into main.c and boot.c vi mktmp.c), instead
just link to it. There's no reason that callers of
sha_init/sha_update/sha_final should now about the implementation of SHA_INFO.

--- a/myldr/.gitignore
+++ b/myldr/.gitignore
@@ -1,13 +1,12 @@
 Dynamic.pm
 Static.pm
 boot
-boot.o
 boot_embedded_files.c
-main.o
 my_par_pl.c
 par
 parl
 parldyn
 perlxsi.c
-sha1.c
 usernamefrompwuid.h
+*.o
+*.obj
