--- a/.github/workflows/perl.yml
+++ b/.github/workflows/perl.yml
@@ -10,10 +10,7 @@ jobs:
     strategy:
       matrix:
         os: ['windows-latest']
-        perl: 
-          - '5.32'
-          - '5.36'
-          - '5.38'
+        perl: ['5.40', '5.42']
 
     name: Perl ${{ matrix.perl }} on ${{ matrix.os }}
     steps:
@@ -23,7 +20,7 @@ jobs:
         id: setup
         with:
           perl-version: ${{ matrix.perl }}
-          distribution: strawberry
+          distribution: default
           install-modules-with: cpanm
       - run: |
           $env:PATH
