--- a/.github/workflows/perl.yml
+++ b/.github/workflows/perl.yml
@@ -10,12 +10,12 @@ jobs:
     strategy:
       matrix:
         os: ['windows-latest']
-        perl: 
+        perl:
           - '5.32'
           - '5.36'
-          - '5.38'
+          - '5.38.2'  # should be '5.38', but '5.38.4' strawberry zip is missing from shogo82148
           - '5.40'
-
+          - '5.42'
     name: Perl ${{ matrix.perl }} on ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
